# MachineSimulator

CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  CMakeLists.txt  Drawable.h  HaroldFactory.cpp  MachineDrawable.cpp  MachineDrawable.h  MachineDrawableFactory.cpp  MachineDrawableFactory.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  ViewTimeline.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  CustomMachine.cpp  CustomMachine.h  Gear.cpp  Gear.h  Lever.cpp  Lever.h  LeverEndSink.cpp  LeverEndSink.h  LeverEndSource.cpp  LeverEndSource.h  MachineAFactory.cpp  MachineAFactory.h  MachineBFactory.cpp  MachineBFactory.h  MachineFactory.cpp  MachinesFactory.cpp  MachinesFactory.h  Motor.cpp  Motor.h  Piston.cpp  Piston.h  PistonSink.cpp  PistonSink.h  PistonSource.cpp  PistonSource.h  Polygon.cpp  Polygon.h  Rod.cpp  Rod.h  RodEndSink.cpp  RodEndSink.h  RodEndSource.cpp  RodEndSource.h  (+6 more)
MachineTests/: ActualMachineTest.cpp  CMakeLists.txt  GearTest.cpp  LeverTest.cpp  MachineTest.cpp  MotorTest.cpp
resources/xrc/: main.fbp  main.xrc
